# sap

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  README.rst  Readme.md  generate_docs.sh  lgtm.yml
docs/: index.html
docs/doctrees/: contact.doctree  environment.pickle  header.doctree  index.doctree  quickstart.doctree
docs/html/: .buildinfo  contact.html  genindex.html  header.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/html/_sources/: contact.rst.txt  index.rst.txt  quickstart.rst.txt
docsrc/source/: conf.py  contact.rst  header.rst
docsrc/source/_static/css/: custom.css
example/: CMakeLists.txt  Readme.md
example/src/: example.cpp
include/: sap.h
src/: sap.c
tests/: CMakeLists.txt
tests/src/: cpptests.cpp  ctests.c
